ToolRunner: fix CassandrastressTest stderr noise on JDK 25 / ARM64 docker
Two fixes:
- Add --enable-native-access=ALL-UNNAMED to JVM_OPTS in invokeAsync() so
  jffi's System::load no longer emits JDK 25 restricted-method warnings
  to stderr, which was causing assertCleanStdErr() failures in
  CassandrastressTest.
- Add SVE warning pattern to DEFAULT_CLEANERS to filter the ARM64 JVM
  warning 'Unable to get SVE vector length on this system' that appears
  in docker/VM environments without SVE support.